k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helpdesk
  # Namespace = กรอบแบ่ง resources ใน cluster
  # ทุก resource ด้านล่างจะอยู่ใน namespace นี้
