k8s/03-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: helpdesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: valkey/valkey:8-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "64m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]   # ตอบ PONG = ยังมีชีวิต
            initialDelaySeconds: 5
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-pvc      # ชี้ไป PVC ที่สร้างด้านบน
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: helpdesk
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
