k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helpdesk-frontend
  namespace: helpdesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helpdesk-frontend
  template:
    metadata:
      labels:
        app: helpdesk-frontend
    spec:
      containers:
        - name: frontend
          image: helpdesk-frontend:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-frontend
  namespace: helpdesk
spec:
  selector:
    app: helpdesk-frontend
  ports:
    - port: 3000
      targetPort: 3000
